# scouters-dream

./: .gitignore  CMakeLists.txt  Pipfile  README.md  build.sh  bumper_model_testing  digit_model_testing.py  main.py  model_testing.py  pixel_location_grabber.py  sd_gamePiece.py  sd_globals.py  sd_heatmap_utils.py  sd_prepVid.py  sd_robot.py  sd_tracking_utils.py  sd_utills.py  sd_utils.py  tracker.sh
Core/: main.py  sd_heatmap_utils.py  sd_prepVid.py  sd_track_gamePiece.py
Tracker/: CMakeLists.txt  README.md  build.sh
Tracker/c++/include/: boundingBox.hpp  entity.hpp  imgAlgsCpu.hpp  linkedList.hpp  mathUtils.hpp  rectExtention.hpp  tracker.hpp  vectorFuncs.hpp  velocity2d.hpp
Tracker/c++/src/: boundingBox.cpp  cppWraper.cpp  entity.cpp  imgAlgsCpu.cpp  linkedList.cpp  mathUtils.cpp  rectExtention.cpp  tracker.cpp  vectorFuncs.cpp  velocity2d.cpp
Tracker/python/: cpp_utils.py  recognizeBumpersTest.py  tracker.py
utils/c++/include/: imgAlgsCpu.hpp  mathUtils.hpp  vectorFuncs.hpp
utils/c++/src/: boundingBox.cpp  cppWraper.cpp  imgAlgsCpu.cpp  mathUtils.cpp
utils/python/: cpp_utils.py  recognizeBumpersTest.py
